# desktop-calendar-widget

./: README.md  README.zh-CN.md  index.html  package-lock.json  package.json
branding/: README.md  brand-board.html  crop_icon_from_original.py  export_icons.py
scripts/: build-windows.bat  cargo-build-msvc.bat  cargo-build.bat  cargo-build.sh
src/: App.tsx  lunar-javascript.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs  storage.rs
src/components/: CalendarGrid.tsx  ConfirmDialog.tsx  DatePickerPanel.tsx  DayCell.tsx  PinButton.tsx  ResizeHandles.tsx  SettingsButton.tsx  SettingsPanel.tsx  TaskColorPicker.tsx  TaskItem.tsx  TaskList.tsx  TitleBar.tsx  TodayMonthButton.tsx  Tooltip.tsx
src/hooks/: useDateTick.ts  useTasks.ts
src/lib/: dates.ts  holidays.ts  storage.ts  taskColors.ts  types.ts  windowTheme.ts
src/styles/: global.css
