[package]
name = "desktop-calendar-widget"
version = "0.1.1"
description = "Desktop calendar todo widget"
authors = ["Grinf"]
edition = "2021"

[lib]
name = "desktop_calendar_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
